Fix new compiler warnings